css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
    margin: 1em;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    min-width: 320px;
    padding: 0 50px;
    box-sizing: border-box;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

footer section{
    background-color: var(--main-bg-color);
    padding: 30px;
    box-sizing: border-box;
}

/**** Header ****/
header {
    display:flex;
    flex-direction: row;
    justify-content:space-between;

}
header img{
    height: 1.5rem;
    width: 5rem;
    justify-self: flex-start;
    
}
header .links{
    justify-self: flex-end;
    
}
header a{
    text-decoration: none;
    margin: 1em;
    color: black;
}
header a:hover{
    border-top: 2px solid #0065FC;
    padding-top: 10px;
    color:#0065FC;
}

.blue-back {
    float: left;
    width:10px;
    height:10px;
    
}

/**** Search-container ****/
.search-container .search-form{
    display:flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
}
.search-container .location{
    padding : 1rem;
    border-top-left-radius: 1rem;
    border-bottom-left-radius: 1rem;
    border-right: 0;
    border-color: #DEEBFF;
    border-style:solid;
    background-color: #DEEBFF;
}
.search-container .search-text{
    text-align: center;
    padding:1rem;
    border-left: 0;
    border-right: 0;
    border-style:solid;
    font-weight: bold;
}
.search-container .search{
    padding:1rem;
    border-left:0;
    border-style:solid;
    border-color: #0065FC;
    border-top-right-radius: 1rem;
    border-bottom-right-radius: 1rem;
    background-color:#0065FC;
    color:#DEEBFF;
    font-weight: bold;
}


/***** Filters ****/
.filters-container {
    display: flex;
    flex-direction: row;
    justify-items:flex-start;
    margin-top: 2em;
}
.filters-container i{
    color: #0065FC;
}
.filters-container h2{
    margin-top:1rem;
    margin-bottom: 1rem;
    margin-right: 1rem;;
}
.filters-container button{
    border-radius: 3rem;
    border-color: #DEEBFF;
    padding: 1rem;
    font-weight: bold;
    background-color:white;
    border-style: solid;
}
.filters-container button:hover {
    background-color: aqua;
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    gap: 2.5rem;
    width: 100%;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 70%;
}
.hebergements a{
    color:black;
    text-decoration: none;
}
.hebergements img{
    height: 100px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}
.hebergements .card{
    display: flex;
    flex-direction: column;
    width: 15rem;
}
.hebergements-title {
    padding : 1rem;
}
.hebergements-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 1rem;
}
.hebergements a{
    padding:1rem;
}

/****** Populaires ***********/
.populaires {
    width: 30%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding : 1rem;
}
.populaires-cards {
    display: flex;
    flex-direction: column;
    padding: 0 1rem;
    justify-content: space-evenly;
    width: 100%;
    box-sizing: border-box;
    gap:1rem;
}
.populaires-cards .card { 
    display: flex;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}
/****** Activities ******/
.activities-container {
    margin-top:2rem;
    margin-bottom: 2rem;
}
.activities-cards {
    display: flex;
    flex-direction: row;
    gap:1rem;
    justify-content: space-evenly;
    width: 100%;
    box-sizing: border-box;
    gap:1rem;
}
.activities-cards .card { 
    display: flex;
    padding:0;
    width:25%;
}
.activities-cards .card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.activities-cards img {
    height: 400px;
    width: 100%;
    min-width: 323px;
    object-fit: cover;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.activities-cards .card-text{
    margin-top: 10px;
    margin-bottom: 4px;
}


/****** Footer *******/
.footer-links {
    display: flex;
    flex-direction: row;
    justify-content: space-between;

}
.footer-content {
    margin-right:10rem;
}


/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards .card {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {

    .main-container {
        max-width: 767.98px;
        padding : 1rem;
    }

    header, .populaires-cards, .activities-cards{
        flex-direction: column;
    }

    h2 {
        font-size:125%;
    }
    p {
        font-size: 90%;
    }

    .logo{
        margin:auto;
    }

    header .links{
        margin:auto;
        margin-top:1rem;
    }
    header a:hover{
        border-top: 0;
        padding-top: 0;
        border-bottom: 2px solid #0065FC;
        padding-bottom: 10px;
        color:#0065FC;
    }
    .search-container {
        width:100%;
    }
    .search-container .search-text {
        width: 5rem;
    }

    .hebergements-and-populaires {
        flex-direction: column-reverse;
    }
    .populaires-cards .card{
        width:100%;

    }
    .activities-cards {
        justify-content: space-evenly;
        gap: 1rem;

    }
    .activities-cards img {
        height: 100px;
        min-width:auto;
        max-width: fit-content;
        border-top-left-radius: 20px;
        border-top-right-radius: 20px;
    
    }
    .activities-cards .card{
        flex-direction: column;
        width: 100%;
    }

    /****footer***/

    .footer-links {
        flex-direction: column;
    }
    .footer-links h3 , .footer-links p{
        font-size: 1rem;
        width: max-content;

    }
    
 
}

